# jawc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  answers.txt  generate_headers.py  readme.md
src/: dict.c  dict.h  game.c  game.h  main.c  memory.h  printing.c  set.c  set.h  stats.c  target.c
